# quics

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: continuous-integration.yml  release-binary.yml  release-library.yml  release-quics-client.yml  release-quics-protocol.yml  release-quics-server.yml
quics-client/: Cargo.toml
quics-client/src/: lib.rs  main.rs  socks.rs
quics-client/src/connect/: connection.rs  stream.rs
quics-protocol/: Cargo.toml
quics-protocol/src/: client.rs  lib.rs  request.rs  response.rs  server.rs
quics-server/: Cargo.toml
quics-server/src/: lib.rs  main.rs
quics-server/src/connect/: connection.rs  stream.rs
quics-server/src/dns/: mod.rs
