[package]
name = "quics-client"
version = "0.1.1"
edition = "2021"

[features]
default = ["trace", "aws-lc-rs", "limit-connection-reuses"]
trace = ["tracing", "tracing-subscriber"]
limit-connection-reuses = []

[dependencies]
quics-protocol = { path = "../quics-protocol" }
socks = { git = "https://github.com/poruos/socks.git" }

clap = { version = "4.5", features = ["std", "derive", "help", "usage"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "sync"], default-features = false }
s2n-quic = { version = "1", features = ["provider-tls-default", "provider-address-token-default"], default-features = false }

tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

# https://aws.github.io/aws-lc-rs/platform_support.html
aws-lc-rs = { version = "1", features = ["bindgen"], default-features = false, optional = true }
