[package]
name = "quics-server"
version = "0.1.1"
edition = "2021"

[features]
default = ["aws-lc-rs"]

[dependencies]
quics-protocol = { path = "../quics-protocol", default-features = false }

clap = { version = "4.5", features = ["std", "derive", "help", "usage"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"], default-features = false }
s2n-quic = { version = "1", features = ["provider-tls-default", "provider-address-token-default"], default-features = false }
hickory-resolver = { version = "*", features = ["tokio-runtime"], default-features = false }

# https://aws.github.io/aws-lc-rs/platform_support.html
aws-lc-rs = { version = "1", features = ["bindgen"], default-features = false, optional = true }